--- a/Efremov_Diploma.tex
+++ b/Efremov_Diploma.tex
@@ -7,6 +7,7 @@
 top=2cm,bottom=2cm]{geometry}
 \usepackage{longtable}
 \usepackage{comment}
+\usepackage{amsfonts}
 \usepackage{hyperref}
 \usepackage[square, comma, sort&compress, numbers]{natbib}
 \newtheorem{definition}{Определение}
@@ -14,6 +15,9 @@ top=2cm,bottom=2cm]{geometry}
 \newtheorem{utv}{Утверждение}
 
 \graphicspath{{../pics/}}
+
+\newcommand{\specialcell}[2][c]{%
+	\begin{tabular}[#1]{@{}c@{}}#2\end{tabular}}
 
 \begin{document}
 	
@@ -334,7 +338,7 @@ top=2cm,bottom=2cm]{geometry}
 		\hline Линейная множественная регрессия & Связывает зависимую переменную с линейной функцией независимых переменных. Задача сводится к поиску коэффициентов, при которых точность ответа, полученного в результате подстановки входных значений обучающей выборки в итоговую линейную функцию будет максимальна.  
 		 \\
 		 \hline
-		Логическая регрессия & В основе лежит метод максимального правдоподобия. В целом, логика поиска весов аналогична  линейной регрессии, только оценивается вероятность принадлежности к одному из классов, решая задачу бинарной классификации.
+		Логистическая регрессия & В основе лежит метод максимального правдоподобия. В целом, логика поиска весов аналогична  линейной регрессии, только оценивается вероятность принадлежности к одному из классов, решая задачу бинарной классификации.
 		  \\
 		  \hline
 		Деревья классификации 
@@ -373,30 +377,443 @@ top=2cm,bottom=2cm]{geometry}
 	\item Collection-scoring определяет суровость мер, которые необходимо применить к заемщику, при просрочке.
 \end{itemize}
 
-Данная работа нацелена, в первую очередь на анализ адаптации Application скоринга для задач проектного финансирования.
+Данная работа нацелена, в первую очередь на анализ адаптации Application скоринга для задач проектного финансирования. Целевая прогнозируемая переменная имеет числовое значение, поэтому классификационные методы здесь оказываются не уместными. Ключевые модели с такой целевой переменной, о которых пойдет речь далее в работе, это классическая линейная регрессия, градиентный бустинг и нейронные сети. Также в качестве вспомогательного модуля прогнозной модели будут рассмотрены алгоритмы кластеризации: метод иерархической кластеризации и k-ближайших соседей.
 
+\subsection{Обзор регрессионных моделей машинного обучения}
 
+Объектом изучения предиктивной модели называется то, для чего планируется производить предсказания, для текущей работы это объект строительства. Далее в работе эти объекты будем обозначать литерой $x_i$~, где $i$~--- индекс изучаемого объекта. Множество всех объектов строительства в РФ мы обозначим как $\mathbb{X}$. Прогнозируемая величина, которую мы хотим определять, например это может быть вероятность просрочки платежа со стороны застройщика, называется целевой переменной, а множество ее значений пространством $\mathbb{Y}$.
+В нашем случае это подмножество действительных чисел, задающее вероятностное пространство:~$\mathbb{Y} = \mathbb{R}_{[0,1]}$. Отдельный ответ обозначим буквой~$y$.
 
+Значение примера пары объекта и ответа из жизни будем называть обучающим, а всю их совокупность --- обучающей выборкой, обозначаемой как $X = \{(x_1, y_1), \dots, (x_l, y_l)\}$, где $x_z, \dots, x_l$~--- обучающие объекты, а $l$~--- их количество. Особенность обучающей выборки заключается в известности множества ответов $y_1,\dots,y_l$.
 
+Заметим, что объекты~--- это некоторые абстрактные сущности, поэтому для анализа будем описывать объекты с помощью некоторого набора признаков. Признаковое описание объекта, которое задается вектором всех признаков, будем отожествлять с самим объектом.
+
+\subsubsection{Линейная регрессия}
+
+Если в постановке, описанной в предыдущем параграфе, целевая переменная является вещественной и рассматривается вариант обучения с учителем, то задача является задачей регрессии.
+
+Регрессионную задачу всегда можно свести к суммированию значений признаков с некоторыми весами:
+\begin{gather}\label{linreg1}
+	a(x) = \omega_0 + \sum\limits_{j=1}^{d} \omega_i x_i.
+\end{gather}
+Параметры модели - коэффициенты $\omega_i$ (веса). Вес $\omega_i$ также называют свободным коэффициентом или сдвигом (bias в англоязычной литературе). Заметим, что сумма в формуле ~\ref{linreg1} является скалярным произведениемвектора признаков на вектор весов, поэтому запись может быть упрощена:
+\begin{gather}\label{linreg2}
+	 a(x) = \omega_0 + \langle \omega, x\rangle,
+\end{gather}
+где $\omega = (\omega_1,\dots,\omega_d)$~--- вектор весов.
+
+Простая форма линейных моделей позволяет сравнительно быстро и легко их обучать, что делает их весьма популярными при работе с большими объемами данных. Также наличие небольшого и интерпретируемого набора параметров позволяет контролировать риск переобучения, учитывать зашумленность данных, а также работать с небольшими выборками.
+
+\subsubsection{Измерение ошибки в задачах регрессии}
+
+Для обучения любой модели необходимо определить критерий оценки качества предсказаний. Будем обозначать через $y$ значение целевой переменной, а через $a$~--- предсказание модели. Методики оценки отклонения $L(y,a)$ прогноза от истинного ответа рассмотрим ниже.
+
+\textbf{MSE или метод наименьших квадратов} заключается в необходимости посчитать квадрат разности:
+\begin{gather}\label{linregdiff1}
+	L(y,a) = {(a-y)}^2.
+\end{gather}
+Данная функция дифференцируема, поэтому наиболее часто используется в задачах линейной регрессии. Таким образом, для оценки можно использовать функцию:
+\begin{gather}\label{linregdiff2}
+	MSE(a, X) = \frac{1}{l}\sum\limits_{i=1}^{l}{(a(x_i)-y_i)}^2.
+\end{gather}
+Однако, величина среднеквадратичного отклонения плохо интерпретируема, так предсказывая цену в рублях, ошибку мы будем получать в квадратах рублей, для решения этой проблемы используют корень из MSE:
+\begin{gather}\label{linregdiff22}
+	RMSE(a, X) =
+	\sqrt{ \frac{1}{l}\sum\limits_{i=1}^{l}{(a(x_i)-y_i)}^2}.
+\end{gather}
+Среднеквадратичная ошибка хорошо подходит для сравнения двух моделей, а также для контроля качества во время обучения, однако не позволяет сделать вывод о том, насколько качественно конкретная модель решает задачу. Поэтому вместо среднеквадратичной ошибки может быть эффективнее использовать коэффициент детерминации, который определяется как:
+\begin{gather}\label{linregdiff3}
+	R^2(a, X) = 1 - \frac{\sum_{i=1}^{l}{(a(x_i)-y_i)}^2}{\sum_{i=1}^{l}{(y_i-\bar{y})}^2},
+\end{gather}
+где $\bar{y} = \frac{1}{l}\sum_{i=1}^{l}y_i$~--- среднее значение целевой переменной. Коэффициент $R^2$ отражает долю дисперсии, объясненную моделью, в общей дисперсии целевой переменной. Если показатель коэффициента близок к единице, то модель хорошо объясняет данные, если же близок к нулю, то модель нерепрезентативна.
+
+\textbf{MAE}. Если заменить в формуле оценки отклонения квадрат отклонения на модуль:
+\begin{gather}\label{linregdiff4}
+	L(y,a) = |a-y|,
+\end{gather}
+соответствующая функция ошибки  называется \textbf{средним абсолютным отклонением}:
+\begin{gather}\label{linregdiff5}
+	MAE(a,X) = \frac{1}{l}\sum\limits_{i=1}^{l}|a(x_i)-y_i|.
+\end{gather}
+
+Модуль отклонения менее чувствителен к выбросам, но при этом не является дифференцируемым.
+
+Важная проблема абсолютной функции потерь скрыта в ее производной, рассмотрим производные для нее и квадратичной функции:
+\begin{gather}\label{linregdiff6}
+	\frac{\partial}{\partial a}|a-y| = sign(a-y), a\not=y;\\
+	\frac{\partial}{\partial a}(a-y)^2 = 2(a-y).
+\end{gather}
+ 
+При использовании градиентных методов обучения, параметры модели постепенно меняются на основе функции потерь, при этом производная абсолютной функции потерь никак не зависит от близости прогноза к правильному ответу, поэтому ее использование приводит к более долгой и сложной процедуре обучения.
+
+\textbf{MAPE. Средняя абсолютная ошибка} очень похожа на абсолютную ошибку, однако здесь исследуется отклонение не абсолютного значения целевой переменной а относительной величины:
+\begin{gather}\label{linregdiffMAPE}
+	MAPE(a, X) = 100\% \times \frac{1}{l}\sum\limits_{i=1}^{l}\frac{|a(x_i)-y_i|}{|y_i|}
+\end{gather}
+Данный коэффициент не имеет размерности и очень просто интерпретируем. Он означает на какой процент отличается фактическое значение от прогнозного. Основная проблема этой ошибки~--- ее нестабильность.
+
+\textbf{Huber loss}. Одним из вариантов объединения абсолютной и квадратичной функции потерь, учитывающим преимущества как одной, так и второй модели является функция потерь Хубера:
+\begin{gather}\label{linregdiff7}
+	L_{\delta}(y,a) = \begin{cases}
+	\frac{1}{2}(y-a)^2,~\text{если}~|y-a|<\delta
+		\\
+	\delta\left(|y-a|-\frac{1}{2}\delta\right),~\text{если}~|y-a|\geq\delta
+	\end{cases}
+\end{gather}
+
+С помощью параметра $\delta$ можно регулировать выбросы. Если параметр небольшой, то функция ведет себя квадратично только в окрестности нуля. Если же наоборот его увеличивать, то даже для значительных отклонений $(a-y)$ штраф будет вести себя квадратично, и при обучении будет большой акцент на их уменьшение.
+
+\textbf{Log-Cosh}. Для некоторых моделей необходима непрерывная вторая производная функции ошибки. Для функции потерь Хубера это не так, данный недостаток отсутствует у функции потерь log-cosh:
+ \begin{gather}\label{linregdiff8}
+ L(y,a) = \log\cosh(a-y).
+ \end{gather}
+Предельное поведение этой функции аналогично функции потерь Хубера, для небольших отклонений оно квадратично, а для больших - линейное.
+
+Описанные выше функции потерь изображены на~(рис.~\ref{fig:loss_func}).
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.7\linewidth]{loss_func.jpg}
+	
+	\caption{Визуализация функций потерь}
+	
+	\label{fig:loss_func}
+	
+\end{figure}
+
+\subsubsection{Оценивание качества модели}
+
+Для оценки качества исследуемой модели размеченные данные разделяются на две части: обучающую и контрольную выборки. На первой будет происходить обучение модели, на второй будем производить тестирование. Так как результат существенно зависит от разбиения данных, размеченные данные разбиваются на $k$ блоков $X_1, \dots, X_k$ примерно одинакового размера. После чего обучается $k$ моделей $a_1(x), \dots, a_k(x)$, причем $i$-я модель обучается на всех объектах кроме блока $i$. После этого качество модели оценивается по тому блоку, который не участвовал в обучении, а результат усредняется:
+ \begin{gather}\label{modelquality}
+	CV = \frac{1}{k}\sum\limits_{i=1}^{k}Q(a_i(x), X_i).
+\end{gather}
+
+Заметим, что в нашей задаче данные имеют структуру временного ряда, поэтому случайно их перемешивать будет некорректно. Решением этой проблемы может быть подход \textbf{time series cross validation}.
+
+Суть метода заключается в том, что мы начинаем обучать модель на небольшом отрезке временного ряда от начала до некоторого $t$, затем делаем прогноз на $t+n$ и считаем ошибку. На следующем шаге расширяем обучающую выборку до $t+n$ и прогнозируем с $t+n$ до $t+2n$. Так мы продолжаем сдвигать тестовый отрезок ряда до тех пор пока не достигнем последнее доступное наблюдение. Схематически логику можно представить так (рис.~\ref{fig:tcross_val}). 
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.7\linewidth]{tcross_val.jpg}
+	
+	\caption{Кроссвалидация временного ряда}
+	
+	\label{fig:tcross_val}
+	
+\end{figure}
+
+\subsubsection{Обучение линейной регрессии}
+
+Довольно распространенный способ обучения линейной регрессии с использованием среднеквадратичной ошибки. В этом случае получаем задачу оптимизации:
+ \begin{gather}\label{linreglearn1}
+	\frac{1}{l}\sum\limits_{i=1}^{l}(\langle\omega, x_i\rangle - y_i)^2 \rightarrow \min_{\omega}.
+\end{gather}
+Пусть $X$~--- это матрица "объекты-признаки"\, $y$~--- вектор ответов, $\omega$~--- вектор параметров, тогда задачу можно переписать в матричном виде:
+ \begin{gather}\label{linreglearn2}
+	\frac{1}{l}\|X\omega - y\|^2 \rightarrow \min_{\omega},
+\end{gather}
+здесь используется обычная $L_2$-норма. Если найти экстремум данного функционала, получим:
+ \begin{gather}\label{linreglearn3}
+	\omega = (X^TX)^{-1}X^Ty.
+\end{gather}
+Безусловно наличие явной формулы для оптимального веса векторов является большим преимуществом линейной регрессии с квадратичным функционалом. Но данная формула не всегда применима. Так обращение матрицы $X$~--- это сложная операция с кубической сложностью от количества признаков, данная проблема решается использованием линейных методов оптимизации. Но также матрица $X^TX$ может быть вырожденной или плохо обусловленной, данную проблему приходится решать регуляризацией.
+
+Вывод аналитических формул в машинном обучении редко выполним, поэтому был разработан подход, в рамках которого модель можно обучать для широкого класса функционалов.
+
+\subsubsection{Градиентный спуск}
+
+Оптимизационные задачи вида \ref{linreglearn2} можно решать итерационно с помощью градиентных методов. Основное свойство антиградиента~--- указывать направление наискорейшего убывания функции в точке. Пусть $\omega^{(0)}$~--- начальный набор параметров, который можно задать нулевым или сгенерировать случайным образом. Градиентный спуск заключается в повторении следующих шагов до сходимости:
+ \begin{gather}\label{gradmet1}
+	\omega^{(k)} = \omega^{(k-1)} - \eta_k\nabla Q (\omega^{(k-1)}),
+\end{gather}
+где $Q(\omega)$~--- значение функционала ошибки для набора параметров $\omega$, $\eta_k$~--- длина шага, которая позволяет контролировать скорость движения.
+
+Останавливать схождение итерационного процесса можно, например, при близости градиента к нулю или при слишком малом изменении вектора весов. Для градиентного спуска имеет место следующая оценка сходимости:
+ \begin{gather}\label{gradmet2}
+	Q(\omega^{(k)})-Q(\omega^*) = O\left(\frac{1}{k}\right).
+\end{gather}
+
+\subsubsection{Градиентный бустинг}
+
+В основе этого подхода лежит идея комбинирования нескольких моделей для получения более точного результата. Ансамблем называется набор предсказателей, которые вместе дают результат. Ансамбль, в котором предсказатели выстроены последовательно, называется бустинг. Градиентный бустинг~--- это техника машинного обучения для задач классификации и регрессии, которая строит модель предсказания в форме ансамбля базовых предсказывающих моделей, чаще всего решающих деревьев. 
+
+Для начала рассмотрим \textbf{применение бустинга в задаче регрессии}, а именно обратимся к задаче минимизации квадратичного функционала:
+
+ \begin{gather}\label{bust1}
+	\frac{1}{2}\sum\limits_{i=1}^{l}(a(x_i)-y_i)^2 \rightarrow \min_a
+\end{gather}
+
+Итоговый алгоритм будем искать в виде суммы базовых моделей $b_n(x)$:
+\begin{gather}\label{bust2}
+	a_N(x) = \sum\limits_{i=1}^{N}b_n(x),~~b_n\in \mathcal{A}.
+\end{gather}
+
+Построим первый базовый алгоритм:
+\begin{gather}\label{bust3}
+	b_1(x): = \argmin_{b\in\mathcal{A}}\frac{1}{2}\sum\limits_{i=1}^{l}(b(x_i)-y_i)^2.
+\end{gather}
+
+Для большинства семейств алгоритмов эта задача решается просто. Далее необходимо рассчитать остатки на каждом объекте~--- расстояния от ответа алгоритма до истинного ответа:
+\begin{gather}\label{bust4}
+	s_i^{(1)} = y_i - b_1(x_i).
+\end{gather}
+Если прибавить эти остатки к ответам на обучающей выборке, то алгоритм не будет допускать ошибок на обучающей выборке. Поэтому будет разумно построить второй алгоритм, таким образом, чтобы его ответы были как можно ближе к остаткам:
+\begin{gather}\label{bust5}
+	b_2(x): = \argmin_{b\in\mathcal{A}}\frac{1}{2}\sum\limits_{i=1}^{l}(b(x_i)-s_i^{(1)})^2.
+\end{gather}
+И так далее каждый следующий алгоритм будем настраивать на остатки предыдущих:
+\begin{gather}\label{bust6}
+	s_i^{(N)} = y_i - \sum\limits_{n=1}^{N-1}b_n(x_i) = y_i - a_{N-1}(x_i),~~~~i=1,\dots,l;
+	\\
+	b_N(x): = \argmin_{b\in\mathcal{A}}\frac{1}{2}\sum\limits_{i=1}^{l}(b(x_i)-s_i^{(N)})^2.
+\end{gather}
+Стоит отметить и тот факт, что остатки могут быть найдены как антиградиент функции потерь по ответу модели, посчитанный в точке ответа уже построенной композиции:
+\begin{gather}\label{bust7}
+	s_i^{(N)} = y_i - a_{N-1}(x_i) = - \frac{\partial }{\partial z}\frac{1}{2}(z-y_i)^2\bigg|_{z=a_{N-1}(x_i)}
+\end{gather}
+
+Получается, что выбирается такой базовый алгоритм, который как можно сильнее уменьшит ошибку композиции, так как он близок к антиградиенту функционала на обучающей выборке. Рассмотрим это свойство подробнее, а также обобщим его на другие функции потерь.
+
+\textbf{Градиентный бустинг.} Рассмотрим некоторую дифференцируемую функцию потерь $L(y,z)$. Будем строить взвешенную сумму базовых алгоритмов:
+\begin{gather}\label{gradbust1}
+	a_N(x) = \sum\limits_{n=0}^{N}\gamma_nb_n(x), 
+\end{gather}
+где $b_0(x)$~--- начальный базовый алгоритм, как правило коэффициент при нем берут равным единице, а сам алгоритм выбирают максимально простым, для задач регрессии это обычно средний ответ:
+\begin{gather}\label{gradbust2}
+	b_0(x) =  \frac{1}{l}\sum\limits_{i=1}^{l}y_i.
+\end{gather}
+
+Применим индукционный подход и предположим, что мы построили композицию $a_{N-1}(x)$ из $N-1$ алгоритма, и хотим теперь выбрать следующий базовый алгоритм $b_N(x)$ таким образом, чтобы как можно сильнее уменьшить ошибку:
+\begin{gather}\label{gradbust3}
+	\sum\limits_{i=1}^{l}L(y_i, a_{N-1}(x_i)+\gamma_Nb_N(x_i)) \rightarrow \min_{b_N, \gamma_N}.
+\end{gather}
+
+Для решения этой задачи предположим, что в качестве алгоритма $b_N(x)$ мы могли бы рассмотреть произвольную функцию, тогда задача сводится к необходимости понять какие значения $s_i$ она должна принимать на  объектах обучающей выборки:
+\begin{gather}\label{gradbust4}
+	\sum\limits_{i=1}^{l}L(y_i, a_{N-1}(x_i)+s_i) \rightarrow \min_{s_1, \dots, s_l}.
+\end{gather}
+
+Конечно, можно потребовать $s_i = y_i-a_{N-1}(x_i)$, но такой подход никак не учитывает особенности функции потерь $L(y,z)$, поэтому правильнее предложить $s_i$ противоположным производной функции потерь в точке $z=a_{N-1}(x_i)$:
+\begin{gather}\label{gradbust5}
+	s_i = -\frac{\partial L}{\partial z}\bigg|_{z = a_{N-1}(x_i)}.
+\end{gather}
+
+При таком подходе мы сдвинемся в сторону скорейшего убывания функции потерь. При этом интересным свойством оказывается совпадение вектора сдвигов $s = (s_1,\dots, s_l)$ с антиградиентом:
+\begin{gather}\label{gradbust6}
+	\left(-\frac{\partial L}{\partial z}\bigg|_{z = a_{N-1}(x_i)}\right)_{i=1}^{l} = -\nabla_z\sum\limits_{i=1}^{l}L(y_i, z_i)|_{z_i = a_{N-1}(x_i)}.
+\end{gather}
+При таком выборе сдвигов по сути происходит один шаг градиентного спуска, при движении в сторону наискорейшего убывания ошибки на обучающей выборке. Речь идет о градиентном спуске в $l$-мерном пространстве предсказаний алгоритма на объектах обучающей выборки. 
+
+Теперь, когда есть понимание, какие значения должен принимать новый алгоритм на обучающей выборке необходимо по данным значениям, заданным в конечном числе точек построить функцию определенную на всем пространстве объектов. По сути это решение классической задачи обучения с учителем, воспользуемся простым функционалом, а именно среднеквадратичной ошибкой, для построения базового алгоритма, приближающего градиент функции потерь на обучающей выборке:
+\begin{gather}\label{gradbust7}
+	b_N(x) = \argmin_{b\in\mathcal{A}} \sum\limits_{i=1}^{l}(b(x_i)-s_i)^2.
+\end{gather}
+Важно, что на этом шаге мы оптимизируем функцию потерь независимо от функционала исходной задачи, так как вся информация о функции потерь $L$ находится в антиградиенте 
+$s_i$ и на данном шаге решается лишь задача аппроксимации функции по $l$ точкам. Естественно можно использовать и другие функционалы, но среднеквадратичной ошибки обычно оказывается достаточно. 
+
+После того, как новый базовый алгоритм найден, можно подобрать коэффициент при нем по аналогии с наискорейшим градиентным спуском:
+\begin{gather}\label{gradbust8}
+\gamma_N = \argmin_{\gamma\in\mathbb{R}}\sum\limits_{i=1}^{l}L(y_i, a_{N-1}(x_i) + \gamma b_N(x_i)).
+\end{gather}
+
+Подход с аппроксимацией антиградиента базовыми алгоритмами, описанный выше, и называется градиентным бустингом. Данный метод представляет собой поиск лучшей функции, восстанавливающей зависимость ответов от объектов, в пространстве всех возможных функций. Поиск этой функции происходит с помощью псевдоградиентного спуска, каждый шаг делается вдоль направления, задаваемого некоторым базовым алгоритмом. При этом сам базовый алгоритм выбирается так, чтобы как можно лучше приближать антиградиент ошибки на обучающей выборке.  
+
+\subsubsection{Нейронные сети}
+Для начала необходимо определить понятие нейрона в машинном обучении. Пусть на вход подается $n$ величин $x_1,\dots, x_n$ бинарных признаков, описывающих объект $x$. Эти признаки будем трактовать как импульсы, поступающие на вход нейрона через $n$ входных каналов. Будем считать, что импульсы попадая в нейрон складываются с весами $\omega_1,\dots,\omega_n$. Если суммарный импульс превышает заданный порог активации $\omega_0$, то нейрон возбуждается и выдает на выходе один результат, иначе другой, в основе выбора лежит функция активации. Таким образом работу нейрона можно представить как вычисление функции:
+\begin{gather}\label{ney1}
+	a(x,\omega) = \sigma(\langle \omega, x \rangle) = \sigma\left(\sum\limits_{i=1}^{n} \omega_if_i(x)-\omega_0, \right)
+\end{gather}
+где $\sigma(z)$~--- функция активации, схематично принцип работы нейрона изображен на (рис.~\ref{fig:neyron}).
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.5\linewidth]{neyron.jpg}
+	
+	\caption{Нейрон}
+	
+	\label{fig:neyron}
+	
+\end{figure}
+
+Нейронной сетью называется композиция таких нейронов и визуально может быть представлена следующим образом (рис.~\ref{fig:neyron_net}).
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.8\linewidth]{neyron_net.jpg}
+	
+	\caption{Нейронная сеть}
+	
+	\label{fig:neyron_net}
+	
+\end{figure}
+
+Обучение нейронной сети в задачах регрессии схоже с градиентным спуском. Пусть $\{x_i, y_i\}_{i=1}^{N}$~--- обучающая выборка, $a(x,\omega)$~--- исследуемая нейросетевая модель, $L(y,z)$~--- функция потерь, тогда задача обучения может быть представлена, как:
+\begin{gather}\label{ney2}
+	Q(\omega) = \sum\limits_{i=1}^{N}L(y_i, a(x_i, \omega)) \rightarrow \min_{\omega}.
+\end{gather}
+
+Важным преимуществами нейросетевых алгоритмов является возможно наделять архитектуру сети нужными свойствами, принимать на входе и генерировать на выходе сложно структурированные данные. Однако, архитектуру необходимо подбирать вручную и моделям свойственно сильное переобучение. Нейронные сети хорошо подходят для решения задач на однородных входных данных, например изображениях. При регрессии на неоднородных табличных данных при применении классических моделей показывают не лучший результат согласно исследованиям \ref{}, исследование работы нейросетевых моделей в рамках данной работы не проводилось.
+
+\subsection{Обзор алгоритмов  кластеризации в машинном обучении}
+
+Пусть дана выборка объектов $X = (x_i)_{i-1}^{l},~x_i\in\mathbb{X}$. Задача кластеризации заключается в том, чтобы необходимо выявить в данных $K$ кластеров~--- таких областей, что объекты внутри одного кластера похожи друг на друга, а из разных кластеров нет. Если определять задачу формально, то требуется построить алгоритм $a: \mathbb{X}\rightarrow{1,\dots,K}$ , определяющий для каждого объекта номер его кластера.
+
+\subsubsection{Метрики качества кластеризации}
+Подходы к оценке качества кластеризации можно разделить на два ключевых: внутренний и внешний. В основе внутреннего лежат некоторые свойства выборки и кластеров, а внешнего на некоторых дополнительных данных, например информации об истинных кластерах.
+
+Если известно истинное распределение объектов по кластерам, то задачу можно рассматривать как многоклассовую классификацию. Так как в текущем исследовании эталонных данных о распределении нет, то этот подход далее рассмотрен не будет.
+
+Далее будут рассмотрены внутренние метрики качества. 
+
+\textbf{Внутриклассовое расстояние}:
+\begin{gather}\label{klastdist1}
+	\sum\limits_{k=1}^{K}\sum\limits_{i=1}^{l}[a(x_i)=k]\rho(x_i, c_k),
+\end{gather}
+где $c_k$~--- центр кластера, $\rho(x,z)$~--- некоторая функция расстояния. Этот функционал требуется минимизировать.
+
+\textbf{Межклассовое расстояние}:
+\begin{gather}\label{klastdist2}
+\sum\limits_{i,j = 1}^{l}[a(x_i)\not=a(x_j)]\rho(x_i, x_j).
+\end{gather}
+Этот функционал необходимо максимизировать.
+
+\textbf{Индекс Данна}:
+\begin{gather}\label{klastdist3}
+	\frac{min_{1\leq k\leq k'\leq K}d(k,k')}{max_{1\leq k\leq K}d(k)}, 
+\end{gather}
+где $d(k,k')$~--- расстояние между кластерами $k$ и $k'$, например можно взять евклидово расстояние между центрами, а $d(k)$~--- внутрикластерное расстояние для $k$-го кластера. Данный индекс необходимо максимизировать.
+
+\subsubsection{Метод $k$-средних}
+
+Одним из наиболее популярных методов кластеризации является $K-Means$, который оптимизирует внутрикластерное расстояние \ref{klastdist1}, используя квадрат евклидовой метрики. В данном функционале две степени свободы: центры кластеров $c_k$ и распределение объектов по кластерам $a(x_i)$. Выберем для этих величин произвольные начальные приближения, а затем пошагово будем их оптимизировать.
+
+Фиксируем центры кластеров, внутрикластерное расстояние будет минимальным при условии, что каждый объект будет будет относится к тому кластеру, чей центр является ближайшим:
+\begin{gather}\label{klastdist4}
+	a(x_i) = \argmin_{1\leq k\leq K} \rho(x_i, c_k).
+\end{gather}
+
+Фиксируем распределение объектов по кластерам. После чего внутрикластерное расстояние с квадратом евклидовой можно продифференцировать по центрам кластеров и вывести аналогичные формулы для них:
+\begin{gather}\label{klastdist5}
+c_k = \frac{1}{\sum\limits_{i=1}^{l}[a(x_i)= k]} \sum\limits_{i=1}^{l}[a(x_i)= k]x_i.
+\end{gather}
+Повторяя эти шаги до сходимости, алгоритм выдает распределение объектов по кластерам. Стоит отметить, что результат работы $k-means$ существенно зависит от начального приближения
+
+\subsubsection{Иерархическая кластеризация}
+Описанный выше метод кластеризации имеет плоскую структуру кластеров. Для части задач бывает необходимо построить иерархию вложенных кластеров,в которой верхним уровнем является один большой кластер, а на нижнем уровне $l$ кластеров, состоящих из 1 объекта каждый. Одним из таких подходов является восходящая кластеризация, на нижнем уровне все объекты принадлежат к отдельным кластерам:$C^l = \{\{x_1\},\dots,\{x_l\}\}$. Каждый следующий уровень $C^j$ получается путем объединения двух наиболее похожих кластеров с предыдущего уровня $C^{j+1}= \{X_1, \dots,X_{j+1}\}$. При этом схожесть кластеров можно определять с помощью некоторой функции $d(X_m, X_n)$, например это может быть расстояние между центрами кластеров.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newpage
-\section{Формальная постановка задачи}
+\section{Предлагаемые изменения}
+На фоне обостренной быстро меняющейся экономической ситуации в стране, а также крупных логистических проблем в строительной отрасли, мониторинг финансируемых объектов стройки, по которым банк является гарантом, важен как никогда.
+Поэтому для понимания необходимости заложения резервов по строительным объектам и прогноза соответствия фактических работ по строительному объекту и план-графиков, необходимо оценивать фактическую степень готовности объекта. Как унифицированный параметр-индикатор в данном исследовании предлагается дата полной готовности объекта.   
 
-\subsection{Ключевые проблемы процесса мониторинга проектов}
+\subsection{Формальная постановка задачи}
 
-\subsection{Возможности внедрения с учетом консервативности и систем безопасности банка}
+Необходимо спрогнозировать фактическую дату готовности строительного объекта на отчетную дату на основании актуальных данных об объекте строительства и девелопере. Так как прогноз значения с календарным типом данных является затруднительным, будем прогнозировать число дней, которое пройдет с отчетной даты до даты готовности. Прогноз будет реализован с применением алгоритмов машинного обучения.
 
+В качестве критериев оценки качества работы алгоритмов предлагается сравнение ошибок: MSE, $R^2$, MAE и MAPE.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Входные данные}
 
-\newpage
-\section{Описание модели}
+В роли основного источника данных выступает закрытое внутреннее корпоративное хранилище данных "ПАО Сбербанк" (рис.~\ref{fig:data_source}) Sber Data Factory или Фабрика данных. Данные, интересующие нас в рамках решаемой задачи,  реплицируются из трех основных источников: Единой информационной системы жилищного строительства (ЕИСЖС), Единого ресурса застройщиков (ЕРЗ) и внутрибанковских сервисов. Из последних тянется количественная аналитика по объектам ипотеки, эскроу счетов и проектному финансированию. Единый ресурс застройщиков предлагает агрегированные данные продаж, собраные на базе статистики агенств и самих девелоперов. ДОМ.РФ же при подключении к Api ЕИСЖС  предлагает некоторые аналитические данные собраные на базе собственных моделей и статистики дочернего банка Банк ДОМ.РФ, а также набор данных, представленных на открытом портале наш.дом.рф. Последние в обязательном порядке поставляются застройщиками в виде соответствующих документов: проектных деклараций, разрешительной документации, проектной документации и отчетности застройщика. 
+Здесь важно заметить, что в проектной декларации, публикуемой ежемесячно, фигурирует дата планового окончания строительства, прогнозируемая застройщиком. Эта дата будет выбрана в качестве значений для обучающей выборки.  
+
+Обработка данных выполнена при помощи Jupyter Notebook на языке программирования python.
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=\linewidth]{data_source.jpg}
+	
+	\caption{Схема источников данных}
+	
+	\label{fig:data_source}
+	
+\end{figure}
+
+Данные из всех систем связываются по ключевым идентификаторам и сджойниваются в одну матрицу признаков посредством системы работы с данным Hadoop.
+
+\subsection{Описание моделей}
+
+В данном исследовании сравнивается результат работы двух аналитических прогнозных модели машинного обучения: линейной регрессии и градиентного бустинга.
+Также для каждой из моделей проверяется гипотеза эффективности применения предварительной кластеризации объектов строительства. Схематичное изображение дата-тракта исследованных моделей представлено на (рис.~\ref{fig:data_tract}).
+
  
-\subsection{Этап предобработки данных}
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=\linewidth]{data_tract.jpg}
+	
+	\caption{Схематичное изображение исследованных моделей}
+	
+	\label{fig:data_tract}
+	
+\end{figure} 
  
-\subsection{Ядро модели}
+ 
+ 
+\subsubsection{Этап предобработки данных}
+ 
+На этапе предобработки данных исследовалась гипотеза, о возможности сгруппировать каким-либо образом объекты строительства для коллективного анализа и применения корректирующих мер на схожие объекты. 
+
+В качестве группирующих алгоритмов использовались алгоритм кластеризации $k-means^{++}$ и классификация по порогу фильтрующего значения.
+
+\textbf{$\mathbf{k-means^{++}}$.} Реализация алгоритма взята из библиотеки sklearn с модификацией выбора первого приближения. Алгоритм кластеризации неплохо себя показал, однако потребовал дополнительного времени для обучения. Кластеризация производилась с входным параметром 3, 4, и 5, задающим предполагаемое количество кластеров. Такие значения подобраны из соображений дальнейшей работы с моделями. Обслуживать более 5 регрессионных моделей сложно, а при количестве меньшем 3 кластеризация теряет смысл исходя из природы данных.
+Результат работы алгоритма представлен на (рис.~\ref{fig:k-means}), взята наиболее репрезентативная проекция, координаты не интерпретируемы. Однако видна тенденция к удачному разделению множества объектов на 4 группы это подтверждают и количественные метрики оценки ошибки в Таблице~\ref{Tab:2}. Ввиду большого набора признаков в исходном датасете и небольшого количества объектов определить степень влияния конкретного признака на попадание объекта в тот или иной кластер становится проблематично, что снижает общую интерпретируемость модели. 
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.8\linewidth]{k-means.jpg}
+	
+	\caption{Результат работы k-means для разного количества кластеров}
+	
+	\label{fig:k-means}
+	
+\end{figure} 
+
+\begin{table}[h]
+	\centering
+	%\begin{tabular}{l|l|l|l}
+	\begin{tabular}{cccc}
+		
+		\hline  Модель& \specialcell{Внутреннее\\расстояние} &  \specialcell{Внешнее\\расстояние} & \specialcell{Индекс\\Данна} \\
+		\hline $k-means^{++}$ 3  & 19,4 &  \\
+		$k-means^{++}$ 4 & 7,7 &   \\
+		$k-means^{++}$ 5 & 11,5 &  \\
+		\hline
+		\textbf{Пороговая классификация}&   \textbf{12,2}&     \\
+		\hline 
+	\end{tabular}
+	
+	\caption{Сравнение метрик качества $k-means^{++}$ для разного количества кластеров}
+	\label{Tab:2}
+\end{table}
+
+
+\textbf{Пороговая классификация.} Здесь, проверялась гипотеза о возможности разделить объекты недвижимости по уровню, а именно, за основу был взят признак $f$:
+\begin{gather}\label{pklas1}
+	a_i\leq \frac{p_j\cdot|R|}{\sum\limits_{k\in R} p_k}\leq a_{i+1},
+\end{gather}
+где $p_j$~--- актуальная стоимость строительства исследуемого объекта, $R$~--- все объекты жилищного строительства в регионе, $|R|$~--- количество этих объектов, а $a_i$~--- выведенные эмпирически пороговые значения. Таким образом, по сути объект строительства оценивается по отношению стоимости его строительства к стоимости среднего объекта стройки в регионе, и на основе пороговых значений этого признака происходит классификация. На (рис.~\ref{fig:porclas}) представлена визуализация значения признака оценки. Не трудно заметить, что точки можно удачно разделить на 4 группы. На основе данных были выбраны 3 пороговых значения по центрам отрезков крайних точек групп: $a_1 = 0,8; a_2 = 1,2; a_3 = 1,5$.
+
+Заметим, что величины ошибок для этого подх
+
+
+
+
+\subsubsection{Ядро модели}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
