Classification implementation added

--- a/Efremov_Diploma.tex
+++ b/Efremov_Diploma.tex
@@ -789,11 +789,11 @@ c_k = \frac{1}{\sum\limits_{i=1}^{l}[a(x_i)= k]} \sum\limits_{i=1}^{l}[a(x_i)= k
 	\begin{tabular}{cccc}
 		
 		\hline  Модель& \specialcell{Внутреннее\\расстояние} &  \specialcell{Внешнее\\расстояние} & \specialcell{Индекс\\Данна} \\
-		\hline $k-means^{++}$ 3  & 19,4 &  \\
-		$k-means^{++}$ 4 & 7,7 &   \\
-		$k-means^{++}$ 5 & 11,5 &  \\
+		\hline $k-means^{++}$ 5  & 18,7 & 28,9 & 1,15\\
+		$k-means^{++}$ 4 & 15,9 & 28,1 & 1,31\\
+		$k-means^{++}$ 3 & 19,4 &  23,9 & 1,05\\
 		\hline
-		\textbf{Пороговая классификация}&   \textbf{12,2}&     \\
+		\textbf{Пороговая классификация}&   \textbf{20,2}& \textbf{20,2}&  \textbf{20,2}  \\
 		\hline 
 	\end{tabular}
 	
@@ -806,11 +806,23 @@ c_k = \frac{1}{\sum\limits_{i=1}^{l}[a(x_i)= k]} \sum\limits_{i=1}^{l}[a(x_i)= k
 \begin{gather}\label{pklas1}
 	a_i\leq \frac{p_j\cdot|R|}{\sum\limits_{k\in R} p_k}\leq a_{i+1},
 \end{gather}
-где $p_j$~--- актуальная стоимость строительства исследуемого объекта, $R$~--- все объекты жилищного строительства в регионе, $|R|$~--- количество этих объектов, а $a_i$~--- выведенные эмпирически пороговые значения. Таким образом, по сути объект строительства оценивается по отношению стоимости его строительства к стоимости среднего объекта стройки в регионе, и на основе пороговых значений этого признака происходит классификация. На (рис.~\ref{fig:porclas}) представлена визуализация значения признака оценки. Не трудно заметить, что точки можно удачно разделить на 4 группы. На основе данных были выбраны 3 пороговых значения по центрам отрезков крайних точек групп: $a_1 = 0,8; a_2 = 1,2; a_3 = 1,5$.
+где $p_j$~--- актуальная стоимость строительства исследуемого объекта, $R$~--- все объекты жилищного строительства в регионе, $|R|$~--- количество этих объектов, а $a_i$~--- выведенные эмпирически пороговые значения. Таким образом, по сути объект строительства оценивается по отношению стоимости его строительства к стоимости среднего объекта стройки в регионе, и на основе пороговых значений этого признака происходит классификация. На (рис.~\ref{fig:porclas}) представлена визуализация значения признака оценки. Не трудно заметить, что точки можно удачно разделить на 4 группы. На основе данных были выбраны 3 пороговых значения по центрам отрезков крайних точек групп: $a_1 \approx 0,8; a_2 \approx 1,2; a_3 \approx 1,5$.
 
-Заметим, что величины ошибок для этого подх
+Заметим, что величины ошибок для этого подхода не сильно хуже результатов работы алгоритмов кластеризации (Таблица~\ref{Tab:2}). Однако, интерпретируемость пороговой классификации значительно выше, так выделяются 4 слоя объектов строительства, условно их можно назвать: "эконом", "средний класс", "бизнес" и "элитное" жилье. Интерпретируемость высока еще и потому, что такой терминологии придерживаются маркетологи крупных девелоперских компаний. 
 
+Резюмируя, разница в величине ошибки $\approx10\%$ на данном этапе не является критической, так как напрямую не влияет на точность модели, а только на то, в какую регрессионную группу попадет объект. Поэтому на данном этапе в силу лучшей интерпретируемости предполагаем использование модели классификации с большим приоритетом.  
 
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.8\linewidth]{porclas.jpg}
+	
+	\caption{Распределение значений признака $f$ }
+	
+	\label{fig:porclas}
+	
+\end{figure} 
 
 
 \subsubsection{Ядро модели}
